# roshamble

./: .gitignore  Cargo.toml  Journal  bacon.toml  index.css  package-lock.json  package.json
assets/: output.css
golang/: docker-compose.yaml  go.mod  go.sum  package-lock.json
golang/assets/: output.css
golang/cmd/: main.go
golang/internal/auth/: auth.go
golang/internal/handlers/: authenticated_handlers.go  handlers.go
golang/internal/services/: matchmaking.go  users.go
golang/migrations/: 20250206045047_create_user_auth_schema.sql  20250208201110_add_username_to_user.sql  20250208201243_add_password_to_users.sql  20250212052034_remove_fullname_from_users.sql  20250218003330_create_matchmaking_queue.sql  20250218003331_add_elo.sql  20250228003331_change_matchmaking_table.sql  20250228003332_add_unique_constraint.sql
golang/templates/auth/: login.html  (+2 more)
migrations/: 20250208201110_add_username_to_user.sql
rust/: Cargo.toml  Journal  package-lock.json
rust/migrations/: 20250206045047_create_user_auth_schema.sql  20250208201243_add_password_to_users.sql  20250212052034_remove_fullname_from_users.sql  20250218003330_create_matchmaking_queue.sql
rust/src/: main.rs
rust/templates/: index.html  matchmaking.html
src/: main.rs
src/data/: users.rs
src/handlers/: auth_handlers.rs  dashboard_handlers.rs  matchmaking_handlers.rs  mod.rs
src/routes/: auth_routes.rs  authenticated_routes.rs  mod.rs
src/services/: matchmaking_service.rs  users_service.rs
templates/: dashboard.html  gametypes.html  index.html
templates/auth/: login.html  register.html
(+13 files in other folders)
