[package]
name = "roshamble"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
bcrypt = "0.17.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = "1.13.1"
